--- a/index.css
+++ b/index.css
@@ -21,7 +21,8 @@ body {
 
 .container {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
+    gap: 100px;
     padding: 20px;
 }
 
